// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileListTable should match snapshot given icon size is large 1`] = `
<body>
  <div>
    <table
      class="ui striped table"
    >
      <thead
        class=""
      >
        <tr
          class=""
        >
          <th
            class=""
          >
            Name
          </th>
          <th
            class=""
          >
            Date Modified
          </th>
          <th
            class=""
          >
            File Size
          </th>
        </tr>
      </thead>
      <tbody
        class=""
      >
        <tr
          class=""
        >
          <td
            class=""
          >
            <div
              class="filelist-table__file-cell"
              data-testid="Documents"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge css-tzssek-MuiSvgIcon-root"
                data-testid="FolderIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2h-8l-2-2z"
                />
              </svg>
              <div>
                Documents
              </div>
            </div>
          </td>
          <td
            class=""
          >
            2021-11-01T21:09:05.237Z
          </td>
          <td
            class=""
          >
            -
          </td>
        </tr>
        <tr
          class=""
        >
          <td
            class=""
          >
            <div
              class="filelist-table__file-cell"
              data-testid="Pictures"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge css-tzssek-MuiSvgIcon-root"
                data-testid="FolderIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2h-8l-2-2z"
                />
              </svg>
              <div>
                Pictures
              </div>
            </div>
          </td>
          <td
            class=""
          >
            2021-09-28T03:39:11.850Z
          </td>
          <td
            class=""
          >
            -
          </td>
        </tr>
        <tr
          class=""
        >
          <td
            class=""
          >
            <div
              class="filelist-table__file-cell"
              data-testid="My Home.png"
            >
              <span
                aria-hidden="true"
                class="material-icons notranslate MuiIcon-root MuiIcon-fontSizeLarge filelist-table__preview-icon css-1gb9piy-MuiIcon-root"
              >
                <img />
              </span>
              <div>
                My Home.png
              </div>
            </div>
          </td>
          <td
            class=""
          >
            2021-11-01T21:08:16.736Z
          </td>
          <td
            class=""
          />
        </tr>
        <tr
          class=""
        >
          <td
            class=""
          >
            <div
              class="filelist-table__file-cell"
              data-testid="My dog.png"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge css-tzssek-MuiSvgIcon-root"
                data-testid="ImageIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M21 19V5c0-1.1-.9-2-2-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2zM8.5 13.5l2.5 3.01L14.5 12l4.5 6H5l3.5-4.5z"
                />
              </svg>
              <div>
                My dog.png
              </div>
            </div>
          </td>
          <td
            class=""
          >
            2021-01-01T21:08:16.736Z
          </td>
          <td
            class=""
          />
        </tr>
        <tr
          class=""
        >
          <td
            class=""
          >
            <div
              class="filelist-table__file-cell"
              data-testid="My Script.sh"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge css-tzssek-MuiSvgIcon-root"
                data-testid="DescriptionIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm2 16H8v-2h8v2zm0-4H8v-2h8v2zm-3-5V3.5L18.5 9H13z"
                />
              </svg>
              <div>
                My Script.sh
              </div>
            </div>
          </td>
          <td
            class=""
          >
            2021-10-01T21:08:16.736Z
          </td>
          <td
            class=""
          />
        </tr>
      </tbody>
    </table>
  </div>
</body>
`;

exports[`FileListTable should match snapshot given icon size is medium 1`] = `
<body>
  <div>
    <table
      class="ui striped table"
    >
      <thead
        class=""
      >
        <tr
          class=""
        >
          <th
            class=""
          >
            Name
          </th>
          <th
            class=""
          >
            Date Modified
          </th>
          <th
            class=""
          >
            File Size
          </th>
        </tr>
      </thead>
      <tbody
        class=""
      >
        <tr
          class=""
        >
          <td
            class=""
          >
            <div
              class="filelist-table__file-cell"
              data-testid="Documents"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                data-testid="FolderIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2h-8l-2-2z"
                />
              </svg>
              <div>
                Documents
              </div>
            </div>
          </td>
          <td
            class=""
          >
            2021-11-01T21:09:05.237Z
          </td>
          <td
            class=""
          >
            -
          </td>
        </tr>
        <tr
          class=""
        >
          <td
            class=""
          >
            <div
              class="filelist-table__file-cell"
              data-testid="Pictures"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                data-testid="FolderIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2h-8l-2-2z"
                />
              </svg>
              <div>
                Pictures
              </div>
            </div>
          </td>
          <td
            class=""
          >
            2021-09-28T03:39:11.850Z
          </td>
          <td
            class=""
          >
            -
          </td>
        </tr>
        <tr
          class=""
        >
          <td
            class=""
          >
            <div
              class="filelist-table__file-cell"
              data-testid="My Home.png"
            >
              <span
                aria-hidden="true"
                class="material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium filelist-table__preview-icon css-kp9ftd-MuiIcon-root"
              >
                <img />
              </span>
              <div>
                My Home.png
              </div>
            </div>
          </td>
          <td
            class=""
          >
            2021-11-01T21:08:16.736Z
          </td>
          <td
            class=""
          />
        </tr>
        <tr
          class=""
        >
          <td
            class=""
          >
            <div
              class="filelist-table__file-cell"
              data-testid="My dog.png"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                data-testid="ImageIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M21 19V5c0-1.1-.9-2-2-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2zM8.5 13.5l2.5 3.01L14.5 12l4.5 6H5l3.5-4.5z"
                />
              </svg>
              <div>
                My dog.png
              </div>
            </div>
          </td>
          <td
            class=""
          >
            2021-01-01T21:08:16.736Z
          </td>
          <td
            class=""
          />
        </tr>
        <tr
          class=""
        >
          <td
            class=""
          >
            <div
              class="filelist-table__file-cell"
              data-testid="My Script.sh"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                data-testid="DescriptionIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm2 16H8v-2h8v2zm0-4H8v-2h8v2zm-3-5V3.5L18.5 9H13z"
                />
              </svg>
              <div>
                My Script.sh
              </div>
            </div>
          </td>
          <td
            class=""
          >
            2021-10-01T21:08:16.736Z
          </td>
          <td
            class=""
          />
        </tr>
      </tbody>
    </table>
  </div>
</body>
`;

exports[`FileListTable should match snapshot given icon size is small 1`] = `
<body>
  <div>
    <table
      class="ui striped table"
    >
      <thead
        class=""
      >
        <tr
          class=""
        >
          <th
            class=""
          >
            Name
          </th>
          <th
            class=""
          >
            Date Modified
          </th>
          <th
            class=""
          >
            File Size
          </th>
        </tr>
      </thead>
      <tbody
        class=""
      >
        <tr
          class=""
        >
          <td
            class=""
          >
            <div
              class="filelist-table__file-cell"
              data-testid="Documents"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
                data-testid="FolderIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2h-8l-2-2z"
                />
              </svg>
              <div>
                Documents
              </div>
            </div>
          </td>
          <td
            class=""
          >
            2021-11-01T21:09:05.237Z
          </td>
          <td
            class=""
          >
            -
          </td>
        </tr>
        <tr
          class=""
        >
          <td
            class=""
          >
            <div
              class="filelist-table__file-cell"
              data-testid="Pictures"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
                data-testid="FolderIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2h-8l-2-2z"
                />
              </svg>
              <div>
                Pictures
              </div>
            </div>
          </td>
          <td
            class=""
          >
            2021-09-28T03:39:11.850Z
          </td>
          <td
            class=""
          >
            -
          </td>
        </tr>
        <tr
          class=""
        >
          <td
            class=""
          >
            <div
              class="filelist-table__file-cell"
              data-testid="My Home.png"
            >
              <span
                aria-hidden="true"
                class="material-icons notranslate MuiIcon-root MuiIcon-fontSizeSmall filelist-table__preview-icon css-1yybaem-MuiIcon-root"
              >
                <img />
              </span>
              <div>
                My Home.png
              </div>
            </div>
          </td>
          <td
            class=""
          >
            2021-11-01T21:08:16.736Z
          </td>
          <td
            class=""
          />
        </tr>
        <tr
          class=""
        >
          <td
            class=""
          >
            <div
              class="filelist-table__file-cell"
              data-testid="My dog.png"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
                data-testid="ImageIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M21 19V5c0-1.1-.9-2-2-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2zM8.5 13.5l2.5 3.01L14.5 12l4.5 6H5l3.5-4.5z"
                />
              </svg>
              <div>
                My dog.png
              </div>
            </div>
          </td>
          <td
            class=""
          >
            2021-01-01T21:08:16.736Z
          </td>
          <td
            class=""
          />
        </tr>
        <tr
          class=""
        >
          <td
            class=""
          >
            <div
              class="filelist-table__file-cell"
              data-testid="My Script.sh"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
                data-testid="DescriptionIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm2 16H8v-2h8v2zm0-4H8v-2h8v2zm-3-5V3.5L18.5 9H13z"
                />
              </svg>
              <div>
                My Script.sh
              </div>
            </div>
          </td>
          <td
            class=""
          >
            2021-10-01T21:08:16.736Z
          </td>
          <td
            class=""
          />
        </tr>
      </tbody>
    </table>
  </div>
</body>
`;
